fix: correct spacing for text area and radios

--- a/src/components/TextArea/TextArea.module.scss
+++ b/src/components/TextArea/TextArea.module.scss
@@ -14,6 +14,7 @@
   flex-direction: column;
   align-items: flex-start;
   padding-bottom: 30px;
+  width: 100%;
 
   .header {
     margin-bottom: 20px;
@@ -34,14 +35,15 @@
 
   .textArea {
     @include g.input;
-    width: 90%;
+    box-sizing: border-box;
+    width: 100%;
     height: 200px;
     resize: none;
   }
 
   .characterCount {
     margin-top: 20px;
-    width: 90%;
+    width: 100%;
     text-align: right;
     color: g.$primary-dark-blue;
   }
